## Process this file with automake to produce Makefile.in

SUBDIRS = lib src doc

EXTRA_DIST = COPYING.GPL COPYING.LIB INSTALL.arpsend PLATFORMS \
	config/config.guess \
	config/config.sub \
	config/install-sh \
	config/missing \
	config/mkinstalldirs \
	config/depcomp \
	m4/ac_check_func_proto.m4 \
	m4/ac_unp_check_type.m4 \
	m4/ist_require_libnet.m4
